tests-integration/fixtures/checking/084_instance_eq/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
eq :: forall (a :: Type). Eq (a :: Type) => (a :: Type) -> (a :: Type) -> Boolean
test :: Array Boolean

Types
Eq :: Type -> Constraint

Classes
class Eq (a :: Type)

Instances
instance Eq (Int :: Type)
  chain: 0

Diagnostics
error[NoInstanceFound]: No instance found for: Eq String
  --> 9:1..9:36
  |
9 | test = [eq 123 456, eq "123" "456"]
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
